# SimpleRobot

./: .gitignore  README  README.md  config.py  debug_sim.py  pyproject.toml  robot.py  robot_systems.py  swervemodule.py  teleop.py
src/: config.py  fix_tests.py  keymap.py  keymaps.py  robot_core.py  robot_systems.py  teleop.py
src/toolkit/motors/: ctre_motors.py  rev_motors.py
src/toolkit/sensors/odometry/: vision_estimator.py
src/toolkit/subsystem_templates/drivetrain/: __init__.py
src/units/: __init__.py
subsystem/: __init__.py  single_motor.py
tests/: pyfrc_test.py  test_single_motor_sim.py
toolkit/: command.py
toolkit/motors/: ctre_motors.py  rev_motors.py
toolkit/oi/: buttons.py  controllermap.py
toolkit/sensors/gyro/: Pigeon2.py  __init__.py
toolkit/subsystem_templates/drivetrain/: swerve_drivetrain.py
toolkit/utils/: logger.py  units.py
units/: __init__.py
units/others/: __init__.py
utils/: __init__.py  local_logger.py
