[project]
name = "simplerobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

# This controls the libraries installed in the HOST environment
# This is important for simulation and local debugging
dependencies = [
    # The host environment needs these tools for development, debugging, etc.
    "debugpy",
    "ruff",

    # This list should match the `tool.robotpy.robotpy_extras` or `uv sync` will remove the packages again
    "robotpy[apriltag,commands2,pathplannerlib,phoenix6,rev,sim]",

    # This list should match the `tool.robotpy.requires`
    "numpy",
    "photonlibpy",
    "phoenix6"
]

#
# This configuration file to control what RobotPy packages are installed
# on your RoboRIO

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2025.3.2.2"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all",
    "apriltag",
    "commands2",
    # "cscore"
    # "navx"
    "pathplannerlib",
    # "phoenix5",
    "phoenix6",
    # "playingwithfusion"
    "rev",
    # "romi"
    "sim"
    # "xrp"
]

# Other pip packages to install
# Leave this empty, we use uv for pip packages
requires = [
    "numpy",
    "photonlibpy",
    "phoenix6"
]